--- a/brand_login.html
+++ b/brand_login.html
@@ -402,7 +402,7 @@
   </section>
 
   <script>
-    const API_URL = 'http://localhost:5000/api';
+    const API_URL = 'https://brandscape-backend-zk2o.onrender.com/api';
     
     function showAlert(message, type = 'danger') {
       const alertHTML = `
