--- a/brand_signup.html
+++ b/brand_signup.html
@@ -234,7 +234,7 @@
   </div>
 
   <script>
-    const API_URL = 'http://localhost:5000/api';
+    const API_URL = "https://brandscape-backend-zk2o.onrender.com/api";
     
     function showAlert(message, type = 'danger') {
       const alertHTML = `
