--- a/my_campaigns.html
+++ b/my_campaigns.html
@@ -281,7 +281,7 @@
     </div>
 
     <script>
-        const API_URL = 'http://localhost:5000/api';
+        const API_URL = "https://brandscape-backend-zk2o.onrender.com/api";
         let authToken = localStorage.getItem('authToken');
         
         // Check if user is logged in
