--- a/profile.html
+++ b/profile.html
@@ -260,7 +260,7 @@
     </div>
 
     <script>
-        const API_URL = 'http://localhost:5000/api';
+        const API_URL = "https://brandscape-backend-zk2o.onrender.com/api";
         let authToken = localStorage.getItem('authToken');
         let userData = JSON.parse(localStorage.getItem('userData') || '{}');
         
