--- a/brand_login.html
+++ b/brand_login.html
@@ -148,55 +148,83 @@
     </div>
   </section>
 
-  <!-- ✅ DUMMY LOGIN SCRIPT -->
   <script>
-    function showAlert(message, type = 'danger') {
-      document.getElementById('alert-container').innerHTML = `
-        <div class="alert alert-${type} alert-dismissible fade show" role="alert">
-          ${message}
-          <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-        </div>`;
+  const API_URL = 'https://brandscape-backend-zk2o.onrender.com/api';
+
+  function showAlert(message, type = 'danger') {
+    const alertHTML = `
+      <div class="alert alert-${type} alert-dismissible fade show" role="alert">
+        ${message}
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+      </div>
+    `;
+    document.getElementById('alert-container').innerHTML = alertHTML;
+  }
+
+  document.getElementById('loginForm').addEventListener('submit', async (e) => {
+    e.preventDefault();
+
+    const email = document.getElementById('email').value.trim();
+    const password = document.getElementById('password').value.trim();
+    const loginBtn = document.getElementById('loginBtn');
+    const loginText = document.getElementById('loginText');
+    const loginSpinner = document.getElementById('loginSpinner');
+
+    // Dummy credentials
+    const dummyEmail = "test@brand.com";
+    const dummyPassword = "123456";
+
+    // Show loading spinner
+    loginBtn.disabled = true;
+    loginText.classList.add('d-none');
+    loginSpinner.classList.remove('d-none');
+
+    try {
+      // Try backend login
+      const response = await fetch(`${API_URL}/auth/brand/login`, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ email, password })
+      });
+
+      const data = await response.json();
+
+      if (response.ok) {
+        // ✅ Backend login successful
+        localStorage.setItem('authToken', data.token);
+        localStorage.setItem('userData', JSON.stringify(data.user));
+        showAlert('Login successful! Redirecting...', 'success');
+        setTimeout(() => (window.location.href = 'index.html'), 1000);
+      } else if (email === dummyEmail && password === dummyPassword) {
+        // ✅ Dummy login fallback
+        localStorage.setItem('authToken', 'dummy_token_123');
+        localStorage.setItem('userData', JSON.stringify({ email, name: "Demo Brand" }));
+        showAlert('Dummy login successful! Redirecting...', 'success');
+        setTimeout(() => (window.location.href = 'index.html'), 1000);
+      } else {
+        // ❌ Invalid both backend and dummy
+        showAlert(data.message || 'Invalid credentials. Try again or use dummy: test@brand.com / 123456');
+      }
+
+    } catch (error) {
+      console.error('Login error:', error);
+      // 🌐 If backend is down, still allow dummy login
+      if (email === dummyEmail && password === dummyPassword) {
+        localStorage.setItem('authToken', 'dummy_token_123');
+        localStorage.setItem('userData', JSON.stringify({ email, name: "Demo Brand" }));
+        showAlert('Backend unreachable — Dummy login successful!', 'warning');
+        setTimeout(() => (window.location.href = 'index.html'), 1000);
+      } else {
+        showAlert('Network error. Backend may be offline.', 'danger');
+      }
+    } finally {
+      // Reset button
+      loginBtn.disabled = false;
+      loginText.classList.remove('d-none');
+      loginSpinner.classList.add('d-none');
     }
+  });
+</script>
 
-    document.getElementById('loginForm').addEventListener('submit', (e) => {
-      e.preventDefault();
 
-      const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value.trim();
-
-      // 🧠 Dummy credentials
-      const dummyEmail = "test@brand.com";
-      const dummyPassword = "123456";
-
-      const loginBtn = document.getElementById('loginBtn');
-      const loginText = document.getElementById('loginText');
-      const loginSpinner = document.getElementById('loginSpinner');
-
-      loginBtn.disabled = true;
-      loginText.classList.add('d-none');
-      loginSpinner.classList.remove('d-none');
-
-      setTimeout(() => {
-        if (email === dummyEmail && password === dummyPassword) {
-          localStorage.setItem('authToken', 'dummy_token_123');
-          localStorage.setItem('userData', JSON.stringify({ email, name: "Demo Brand" }));
-
-          showAlert('✅ Dummy login successful! Redirecting...', 'success');
-
-          setTimeout(() => {
-            window.location.href = 'index.html';
-          }, 1000);
-        } else {
-          showAlert('❌ Invalid dummy credentials! Try test@brand.com / 123456');
-        }
-
-        loginBtn.disabled = false;
-        loginText.classList.remove('d-none');
-        loginSpinner.classList.add('d-none');
-      }, 800);
-    });
-  </script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+  
